<resources>
    <string name="app_name">Banco</string>
    <string name="nome">Camila Gagleote</string>
    <string name="RA">1110482312050</string>
    <string name="poupanca">Conta Poupança</string>
    <string name="especial">Conta Especial</string>
    <string name="incluir">Incluir dados relativos na conta</string>
    <string name="rendimento">Mostrar saldo com rendimento</string>
    <string name="mostraDados">Mostrar dados da conta</string>
    <string name="valores">Digite as informações necessárias</string>
    <string name="taxa">Taxa de rendimento (%)</string>
    <string name="saldo">Saldo da conta</string>
    <string name="sacar">Digite o valor que deseja sacar</string>
    <string name="btnsacar">Sacar</string>
    <string name="depositar">Digite o valor que deseja depositar</string>
    <string name="btndepositar">Depositar</string>
    <string name="limite">Limite da conta</string>
    <string name="nomeCliente">Nome do cliente</string>
    <string name="num">Número da conta</string>
</resources>